{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 236,
  "lineage": "bb9b2462-4a4f-4185-ff60-89fbc5771b7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08257d3410dfa4fa8",
            "arn": "arn:aws:ec2:us-east-1:083971419301:elastic-ip/eipalloc-08257d3410dfa4fa8",
            "association_id": "eipassoc-073ac64f35a8041c8",
            "domain": "vpc",
            "id": "eipalloc-08257d3410dfa4fa8",
            "instance": "i-03857550468c49f8d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03d3fdbeab2e4d351",
            "private_dns": "ip-10-0-1-27.ec2.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-3-232-86-51.compute-1.amazonaws.com",
            "public_ip": "3.232.86.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion-eip",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion-eip",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_ecr_repository.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f212e9728990d5bd",
            "arn": "arn:aws:ec2:us-east-1:083971419301:elastic-ip/eipalloc-0f212e9728990d5bd",
            "association_id": "eipassoc-054a72d0549d1edd9",
            "domain": "vpc",
            "id": "eipalloc-0f212e9728990d5bd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0876d6633646eb8ea",
            "private_dns": "ip-10-0-1-168.ec2.internal",
            "private_ip": "10.0.1.168",
            "public_dns": "ec2-54-174-109-203.compute-1.amazonaws.com",
            "public_ip": "54.174.109.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-nat-eip",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-nat-eip",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fa3ed5577079e64",
            "arn": "arn:aws:ec2:us-east-1:083971419301:instance/i-00b7941efa49b0bdf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "farmsafe-dev-app-instance-profile",
            "id": "i-00b7941efa49b0bdf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "farmsafe-key-3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024e4aa4181efcfd2",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-98-84-56-204.compute-1.amazonaws.com",
            "public_ip": "98.84.56.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:083971419301:key/88b62b35-da99-4eed-954f-81cf58174727",
                "throughput": 125,
                "volume_id": "vol-013a5b0fe1e4e639f",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030776bd004940644",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Role": "application"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Role": "application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0563d85662cb73d12"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_ecr_repository.app",
            "data.aws_iam_policy_document.app_instance_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fa3ed5577079e64",
            "arn": "arn:aws:ec2:us-east-1:083971419301:instance/i-03857550468c49f8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03857550468c49f8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "farmsafe-key-3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d3fdbeab2e4d351",
            "private_dns": "ip-10-0-1-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-3-232-86-51.compute-1.amazonaws.com",
            "public_ip": "3.232.86.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:083971419301:key/88b62b35-da99-4eed-954f-81cf58174727",
                "throughput": 125,
                "volume_id": "vol-077004de3505f124a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030776bd004940644",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Role": "bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0788fa654c9062710"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_ecr_repository.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:internet-gateway/igw-096fa32940a0a42b1",
            "id": "igw-096fa32940a0a42b1",
            "owner_id": "083971419301",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-igw",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-igw",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:loadbalancer/app/farmsafe-dev-alb/9de3744bc92d68a1",
            "arn_suffix": "app/farmsafe-dev-alb/9de3744bc92d68a1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "farmsafe-dev-alb-1865447178.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:083971419301:loadbalancer/app/farmsafe-dev-alb/9de3744bc92d68a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "farmsafe-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f858c838918f5fcf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c3602f4e2cf7d6a"
              },
              {
                "subnet_id": "subnet-030776bd004940644"
              }
            ],
            "subnets": [
              "subnet-02c3602f4e2cf7d6a",
              "subnet-030776bd004940644"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-alb",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-alb",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:listener/app/farmsafe-dev-alb/9de3744bc92d68a1/03e712da9de04969",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:targetgroup/farmsafe-dev-app-tg/d2a082c85438d386",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083971419301:listener/app/farmsafe-dev-alb/9de3744bc92d68a1/03e712da9de04969",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:loadbalancer/app/farmsafe-dev-alb/9de3744bc92d68a1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:targetgroup/farmsafe-dev-app-tg/d2a082c85438d386",
            "arn_suffix": "targetgroup/farmsafe-dev-app-tg/d2a082c85438d386",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083971419301:targetgroup/farmsafe-dev-app-tg/d2a082c85438d386",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:083971419301:loadbalancer/app/farmsafe-dev-alb/9de3744bc92d68a1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "farmsafe-dev-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app-tg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app-tg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:083971419301:targetgroup/farmsafe-dev-app-tg/d2a082c85438d386-20251201085718873000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083971419301:targetgroup/farmsafe-dev-app-tg/d2a082c85438d386",
            "target_id": "i-00b7941efa49b0bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.app_instance",
            "aws_iam_role.app_instance",
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_ecr_repository.app",
            "data.aws_iam_policy_document.app_instance_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f212e9728990d5bd",
            "association_id": "eipassoc-054a72d0549d1edd9",
            "connectivity_type": "public",
            "id": "nat-0d52b861dacf5388f",
            "network_interface_id": "eni-0876d6633646eb8ea",
            "private_ip": "10.0.1.168",
            "public_ip": "54.174.109.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030776bd004940644",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-nat",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-nat",
              "Owner": "devops-team",
              "Project": "farmsafe"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:route-table/rtb-07e84452a8989370b",
            "id": "rtb-07e84452a8989370b",
            "owner_id": "083971419301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d52b861dacf5388f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-rt",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-rt",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:route-table/rtb-0356b73ac327e4be2",
            "id": "rtb-0356b73ac327e4be2",
            "owner_id": "083971419301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096fa32940a0a42b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-rt",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-rt",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092dd81d954c365bb",
            "route_table_id": "rtb-07e84452a8989370b",
            "subnet_id": "subnet-0fed4a4b2a788dbc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ed853bb4adc939",
            "route_table_id": "rtb-07e84452a8989370b",
            "subnet_id": "subnet-00e8c67e81da38d53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef428f9784f2d33",
            "route_table_id": "rtb-0356b73ac327e4be2",
            "subnet_id": "subnet-030776bd004940644"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ab1cdcab3f484bb",
            "route_table_id": "rtb-0356b73ac327e4be2",
            "subnet_id": "subnet-02c3602f4e2cf7d6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:security-group/sg-0f858c838918f5fcf",
            "description": "Allow HTTP and HTTPS access to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow egress to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f858c838918f5fcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Backend API from bastion",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0788fa654c9062710"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "farmsafe-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "083971419301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-alb-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-alb-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:security-group/sg-0563d85662cb73d12",
            "description": "Allow SSH and HTTP(S) from private network",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow egress within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0563d85662cb73d12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere (temporary for testing)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f858c838918f5fcf"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f858c838918f5fcf"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0788fa654c9062710"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "farmsafe-dev-app-sg",
            "name_prefix": "",
            "owner_id": "083971419301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-app-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:security-group/sg-0788fa654c9062710",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0788fa654c9062710",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "129.222.149.172/32"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "farmsafe-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "083971419301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-bastion-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:security-group/sg-03da243d4e1a9a4ac",
            "description": "Allow DB access from application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow egress within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03da243d4e1a9a4ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB access from application SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563d85662cb73d12"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "farmsafe-dev-db-sg",
            "name_prefix": "",
            "owner_id": "083971419301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-db-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-db-sg",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:subnet/subnet-0fed4a4b2a788dbc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fed4a4b2a788dbc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083971419301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-1",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-1",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "private"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:subnet/subnet-00e8c67e81da38d53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e8c67e81da38d53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083971419301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-2",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-private-2",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "private"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:subnet/subnet-030776bd004940644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030776bd004940644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083971419301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-1",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-1",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:subnet/subnet-02c3602f4e2cf7d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c3602f4e2cf7d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083971419301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-2",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-public-2",
              "Owner": "devops-team",
              "Project": "farmsafe",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dd11feb95d9ebe87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083971419301:vpc/vpc-0dd11feb95d9ebe87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06244810398bf575d",
            "default_route_table_id": "rtb-0ad54eb0ee7bd8edd",
            "default_security_group_id": "sg-025d468d47a990158",
            "dhcp_options_id": "dopt-09a23e2d5241ba4d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd11feb95d9ebe87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad54eb0ee7bd8edd",
            "owner_id": "083971419301",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-vpc",
              "Owner": "devops-team",
              "Project": "farmsafe"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "farmsafe-dev-vpc",
              "Owner": "devops-team",
              "Project": "farmsafe"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}